Fixed arrow bug, on mobile phones

--- a/portfolio/src/components/Carousel/Carousel.scss
+++ b/portfolio/src/components/Carousel/Carousel.scss
@@ -93,6 +93,7 @@
         button {
             background-color: black;
             border-width: 0 3px 3px 0;
+            border: none;
             display: inline-block;
             padding: 5px;
             margin: 15px;
